// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collect component renders COLLECTED 1`] = `
<button
  aria-checked={true}
  className="c-bttn__collect is-collected cXWZIu"
  data-themed={true}
>
  <i
    aria-hidden="true"
    className="icon"
    style={
      Object {
        "margin": "0 auto",
        "position": "relative",
      }
    }
  >
    <svg
      height="24"
      style={undefined}
      viewBox="0 0 14 18"
      width="24"
    >
      <path
        d="M.5 17.242l5.515-2.364c.63-.27 1.34-.27 1.97 0l5.515 2.364V2c0-.824-.676-1.5-1.5-1.5H2C1.18.5.51 1.173.51 2L.5 17.242z"
        style={
          Object {
            "fill": "#ffffff",
            "stroke": "#ffffff",
            "strokeWidth": undefined,
          }
        }
      />
    </svg>
  </i>
</button>
`;

exports[`Collect component renders COLLECTED and THEMED 1`] = `
<button
  aria-checked={true}
  className="c-bttn__collect is-collected Collect__Wrapper-cfWryy iwcHjR Button__Button-jkHDFw ilDMYR"
  data-themed={true}
>
  <i
    aria-hidden="true"
    className="icon"
    style={
      Object {
        "margin": "0 auto",
        "position": "relative",
      }
    }
  >
    <svg
      height="24"
      style={undefined}
      viewBox="0 0 14 18"
      width="24"
    >
      <path
        d="M.5 17.242l5.515-2.364c.63-.27 1.34-.27 1.97 0l5.515 2.364V2c0-.824-.676-1.5-1.5-1.5H2C1.18.5.51 1.173.51 2L.5 17.242z"
        style={
          Object {
            "fill": "#ffffff",
            "stroke": "#ffffff",
            "strokeWidth": undefined,
          }
        }
      />
    </svg>
  </i>
</button>
`;

exports[`Collect component renders NOT COLLECTED and NOT THEMED 1`] = `
<button
  aria-checked={false}
  className="c-bttn__collect Collect__Wrapper-cfWryy iwcHjR Button__Button-jkHDFw ilDMYR"
  data-themed={false}
>
  <i
    aria-hidden="true"
    className="icon"
    style={
      Object {
        "margin": "0 auto",
        "position": "relative",
      }
    }
  >
    <svg
      height="24"
      style={undefined}
      viewBox="0 0 14 18"
      width="24"
    >
      <path
        d="M.5 17.242l5.515-2.364c.63-.27 1.34-.27 1.97 0l5.515 2.364V2c0-.824-.676-1.5-1.5-1.5H2C1.18.5.51 1.173.51 2L.5 17.242z"
        style={
          Object {
            "fill": "none",
            "stroke": "#555",
            "strokeWidth": undefined,
          }
        }
      />
    </svg>
  </i>
</button>
`;
